src/test/ui/consts/const-eval/issue-52475.stderr
error[E0658]: `while` is not allowed in a `const`
  --> $DIR/issue-52475.rs:6:9
   |
LL | /         while n < 5 {
LL | |
LL | |             n = (n + 1) % 5;
LL | |             x = &0; // Materialize a new AllocId
LL | |         }
   | |_________^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/52000
   = help: add `#![feature(const_loop)]` to the crate attributes to enable
   = help: add `#![feature(const_if_match)]` to the crate attributes to enable

warning: Constant evaluating a complex constant, this might take some time
  --> $DIR/issue-52475.rs:2:18
   |
LL |       let _ = [(); {
   |  __________________^
LL | |
LL | |         let mut x = &0;
LL | |         let mut n = 0;
...  |
LL | |         0
LL | |     }];
   | |_____^

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-52475.rs:8:17
   |
LL |             n = (n + 1) % 5;
   |                 ^^^^^^^^^^^ duplicate interpreter state observed here, const evaluation will never terminate

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0080, E0658.
For more information about an error, try `rustc --explain E0080`.
